[package]
name = "her_packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
debug = "none"
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
incremental = false


[dependencies]
eframe = "0.27.2"
pathdiff = "0.2.1"
physis = "0.2.3"
rfd = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.14"
translit = "0.5.0"

[build-dependencies]
#slint-build = "1.6.0"
